force-app/main/default/objects/Piece__c/Piece__c.object-meta.xml
<CustomObject>
    <label>Piece</label>
    <nameField>
        <label>Piece Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pieces</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>