force-app/main/default/objects/Piece__c/fields/Number_of_Bids__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Bids__c</fullName>
    <label>Number of Bids</label>
    <summaryForeignKey>Bid__c.Piece__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>