force-app/main/default/objects/Piece__c/fields/Style__c.field-meta.xml
<CustomField>
    <fullName>Style__c</fullName>
    <label>Style</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abstract Expressionism</fullName>
            </value>
            <value>
                <fullName>Art Noveau</fullName>
            </value>
            <value>
                <fullName>Avant-garde</fullName>
            </value>
            <value>
                <fullName>Baroque</fullName>
            </value>
            <value>
                <fullName>Classicism</fullName>
            </value>
            <value>
                <fullName>Conceptual Art</fullName>
            </value>
            <value>
                <fullName>Constructivism</fullName>
            </value>
            <value>
                <fullName>Cubism</fullName>
            </value>
            <value>
                <fullName>Dada / Dadaism</fullName>
            </value>
            <value>
                <fullName>Expressionism</fullName>
            </value>
            <value>
                <fullName>Fauvism</fullName>
            </value>
            <value>
                <fullName>Futurism</fullName>
            </value>
            <value>
                <fullName>Impressionism</fullName>
            </value>
            <value>
                <fullName>Installation Art</fullName>
            </value>
            <value>
                <fullName>Land Art / Earth Art</fullName>
            </value>
            <value>
                <fullName>Minimalism</fullName>
            </value>
            <value>
                <fullName>Neo-Impressionalism</fullName>
            </value>
            <value>
                <fullName>Neo-Classicism</fullName>
            </value>
            <value>
                <fullName>Performance Art</fullName>
            </value>
            <value>
                <fullName>Pointillism</fullName>
            </value>
            <value>
                <fullName>Pop Art</fullName>
            </value>
            <value>
                <fullName>Post-Impressionism</fullName>
            </value>
            <value>
                <fullName>Rococo</fullName>
            </value>
            <value>
                <fullName>Surrealism</fullName>
            </value>
            <value>
                <fullName>Suprematism</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>