force-app/main/default/objects/Piece__c/fields/Top_Bid__c.field-meta.xml
<CustomField>
    <fullName>Top_Bid__c</fullName>
    <label>Top Bid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>