force-app/main/default/objects/Piece__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Vendor__c</columns>
    <columns>Size__c</columns>
    <columns>Top_Bid__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>